@@ -17,6 +17,12 @@ Command-Line Client Changes
   to set the build notes from the command-line and from a file, respectively.
   (RBL-2486)
 
+Bug Fixes
+---------
+
+* A bug that prevents image builds from succeeding if a project is hidden
+  has been fixed. (RBL-2619)
+
 Changes in 4.0.1
 ================
 
